<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GravityStarting">

    <TextView
        android:id="@+id/survey_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="sans-serif"
        android:text="@string/getting_started_item"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/survey_columns_qty_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/SurveyLabelStyle"
                android:text="@string/columns"/>

            <TextView
                android:id="@+id/survey_rows_qty_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/SurveyLabelStyle"
                android:text="@string/rows"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/survey_columns_qty_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/colorAccent"
                android:inputType="number"
                android:hint="@string/columns_hint"/>

            <EditText
                android:id="@+id/survey_rows_qty_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/colorAccent"
                android:inputType="number"
                android:hint="@string/rows_hint"/>

        </LinearLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/survey_ready_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vertical_margin"
        android:textColor="@color/colorAccent"
        android:text="Listo"/>

    <LinearLayout
        android:id="@+id/survey_gravity_schema_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/vertical_margin">

        <TextView
            android:id="@+id/survey_gravity_pos_text_view"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/survey_gravity_pos"
            android:textSize="75sp"
            android:textColor="@color/colorBlack"
            tools:text="A1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/vertical_margin"
            android:gravity="center">

            <EditText
                android:id="@+id/survey_barcode_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/barcode_hint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorBlack"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/survey_buttons_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/vertical_margin">

        <Button
            android:id="@+id/survey_retry_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/retry_button"/>

        <Button
            android:id="@+id/survey_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"/>

    </LinearLayout>

</LinearLayout>