<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.example.android.barcodematcher.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ford_logo" />

        <RelativeLayout
            android:id="@+id/images_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/barcode_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/barcode"/>

            <ImageView
                android:id="@+id/pass_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ok_icon"/>

            <ImageView
                android:id="@+id/reject_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/nook_icon"/>

            <ImageView
                android:id="@+id/pos_to_show"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/barcode_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/BarcodeNumberLinearLayout">

            <EditText
                android:id="@+id/part_barcode_container_edit_text"
                style="@style/BarcodeNumberTextView"
                android:hint="@string/number_hint"/>
            
            <TextView
                android:id="@+id/gravity_part_barcode_text_view"
                style="@style/BarcodeInfoEditText"
                android:text="@string/part_number" />
            
        </LinearLayout>

        <LinearLayout
            style="@style/BarcodeNumberLinearLayout">

            <EditText
                android:id="@+id/gravity_part_barcode_container_edit_text"
                style="@style/BarcodeNumberTextView"
                android:hint="@string/number_hint"/>

            <TextView
                android:id="@+id/part_barcode_text_view"
                style="@style/BarcodeInfoEditText"
                android:text="@string/gravity_part_number" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/restart_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Widget.AppCompat.Button.Small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/restart_icon"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/button_restart"
                android:layout_gravity="center" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
